--- a/module6/authn-webhook/webhook-config.json
+++ b/module6/authn-webhook/webhook-config.json
@@ -6,7 +6,7 @@
     {
       "name": "github-authn",
       "cluster": {
-        "server": "http://192.168.34.2:3000/authenticate"
+        "server": "http://localhost:3000/authenticate"
       }
     }
   ],
