--- a/module6/rbac/cluster-admin-to-UiPath-Chen.yaml
+++ b/module6/rbac/cluster-admin-to-UiPath-Chen.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 subjects:
   - kind: User
-    name: mfanjie
+    name: UiPath-Chen
     apiGroup: rbac.authorization.k8s.io
 #  - kind: ServiceAccount
 #    name: default
