fix: mode6 clearup

--- a/module7/scheduling/1.nginx-with-resource.yaml
+++ b/module7/scheduling/1.nginx-with-resource.yaml
@@ -16,9 +16,9 @@ spec:
         - name: nginx
           image: nginx
           resources:
-            limits:
+            limits:         # CGroup的配置；应用使用资源上限； 白天利用资源多;
               memory: 1Gi
               cpu: 1
-            requests:
+            requests:       # Pod最少需要多少资源
               memory: 256Mi
-              cpu: 100m
+              cpu: 100m     # 容器中的单位：1m = 1/1000CPU；晚上资源利用少;
