--- a/module7/scheduling/2.nginx-without-resource.yaml
+++ b/module7/scheduling/2.nginx-without-resource.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: nginx-deployment1
 spec:
   replicas: 1
   selector:
@@ -15,3 +15,4 @@ spec:
       containers:
         - name: nginx
           image: nginx
+          imagePullPolicy: IfNotPresent
