--- a/module7/scheduling/5.a.pod-anti-affinity.yaml
+++ b/module7/scheduling/5.a.pod-anti-affinity.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       affinity:
         podAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
+          requiredDuringSchedulingIgnoredDuringExecution: # 强亲和
           - labelSelector:
               matchExpressions:
                 - key: a
@@ -26,6 +26,9 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
               matchExpressions:
+              # 配置反亲和性，使得两个Pod不可以运行在同一主机节点
+              # 如果2个Pod中一个先启动，因为存在Label:app:anti-nginx,所以第二个一定不会跟第一个部署在一起
+              # 防止: 当某个节点很闲，2个副本都运行在了一个节点，万一有个网络故障，硬件故障，那么无法保证高可用
                 - key: app
                   operator: In
                   values:
@@ -34,3 +37,4 @@ spec:
       containers:
         - name: with-pod-affinity
           image: nginx
+          imagePullPolicy: IfNotPresent
