--- a/module7/scheduling/5.hard-node-affinity.yaml
+++ b/module7/scheduling/5.hard-node-affinity.yaml
@@ -14,6 +14,10 @@ spec:
     spec:
       affinity:
         nodeAffinity:
+          # 强亲和 \
+          # kubectl label no wsl-ubuntu20.04 disktype=ssd
+          # kubectl label --overwrite no wsl-ubuntu20.04 disktype=ssd1
+          # kubectl label no wsl-ubuntu20.04 disktype-
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
               - matchExpressions:
@@ -24,3 +28,4 @@ spec:
       containers:
         - name: nginx
           image: nginx
+          imagePullPolicy: IfNotPresent
