--- a/module7/controller-manager/daemonset.yaml
+++ b/module7/controller-manager/daemonset.yaml
@@ -1,4 +1,7 @@
 apiVersion: apps/v1
+# 给集群管理员用，部署应用，应用需要在集群每个节点，运行pod，做故障检测、收集日志，希望在每个节点上运行一个应用实例
+# daemonset没有指定replicas副本数，那么就每个节点创建一个Pod
+# caliko: 比如整个CNI插件，需要在每个节点上运行一个Pod实例
 kind: DaemonSet
 metadata:
   name: nginx-ds
@@ -14,3 +17,4 @@ spec:
       containers:
         - name: nginx
           image: nginx
+          imagePullPolicy: IfNotPresent
