--- a/module7/controller-manager/job.yaml
+++ b/module7/controller-manager/job.yaml
@@ -3,12 +3,13 @@ kind: Job
 metadata:
   name: pi
 spec:
-  parallelism: 2
-  completions: 5
+  parallelism: 2 # 并行启动2个Pod，2个2个的启动Pod
+  completions: 5 # 总共计算5个Pod
   template:
     spec:
       containers:
         - name: pi
           image: perl
-          command: ["perl",  "-Mbignum=bpi", "-wle", "print bpi(2000)"]
+          imagePullPolicy: IfNotPresent
+          command: ["perl",  "-Mbignum=bpi", "-wle", "print bpi(2000)"] # 计算PI的2000位
       restartPolicy: OnFailure
