--- a/module8/service/topology-nodelocal.yaml
+++ b/module8/service/topology-nodelocal.yaml
@@ -9,5 +9,14 @@ spec:
       name: http
   selector:
     app: nginx
-  topologyKeys:
-    - "kubernetes.io/hostname"
+  topologyKeys:         # 约束服务发现的策略
+    - "kubernetes.io/hostname"      # 请求被限制仅仅在同一个节点上搜索，是否存在Pod的Label=app:nginx
+
+# topology：拓扑
+# service 在创建endpoint时候，要去搜索label，过滤Pod；topology限制了搜索的范围
+# hostname: 仅仅在请求的同一节点搜索
+# zone: 可以在可用区搜索过滤Pod
+# region: 可以在大的数据中心，搜索过滤Pod
+
+# 在 1.22 版本中，Service 对象不再拥有 topologyKeys 属性，引入了拓扑感知提供类似的功能，具体请参考链接：
+#  https://kubernetes.io/zh-cn/docs/concepts/services-networking/service-topology/
