--- a/module9/extended-resource/deployment.yaml
+++ b/module9/extended-resource/deployment.yaml
@@ -15,8 +15,9 @@ spec:
       containers:
         - name: nginx
           image: nginx
+          imagePullPolicy: IfNotPresent
           resources:
             limits:
-              cncamp.com/reclaimed-cpu: 3
+              cncamp.com/reclaimed-cpu: 2
             requests:
-              cncamp.com/reclaimed-cpu: 3
+              cncamp.com/reclaimed-cpu: 2
