--- a/module10/tekton/git-tasks.yaml
+++ b/module10/tekton/git-tasks.yaml
@@ -16,7 +16,7 @@ spec:
       type: git
   steps:
   - name: github-build
-    image: cncamp/executor
+    image: cncamp/executor    # kaniko 镜像构建
     workingDir: /workspace/repo
     args:
     - "--dockerfile=./httpserver/Dockerfile"
