--- a/module11/drain-node/pdb.yaml
+++ b/module11/drain-node/pdb.yaml
@@ -3,7 +3,7 @@ kind: PodDisruptionBudget
 metadata:
   name: nginx-deployment
 spec:
-  minAvailable: 1
+  minAvailable: 1     # maxUnavailable
   selector:
     matchLabels:
       app: nginx
