--- a/module12/istio/1.http-gw/istio-specs.yaml
+++ b/module12/istio/1.http-gw/istio-specs.yaml
@@ -1,32 +1,39 @@
 apiVersion: networking.istio.io/v1beta1
-kind: VirtualService
+kind: VirtualService      # 定义路由配置
 metadata:
   name: simple
 spec:
   gateways:
-    - simple
+    - simple            # 当前配置是?个gateway的一部分
   hosts:
-    - simple.cncamp.io
-  http:
-    - match:
+    - simple.cncamp.io  # 网站域名 <- istio: domain filter   ;  域名校验
+  http:                 # 配置路由转发规则
+    - match:            # 匹配：port
         - port: 80
       route:
         - destination:
-            host: simple.simple.svc.cluster.local
+            host: simple.simple.svc.cluster.local   # Envoy Cluster IP -> K8s service
             port:
               number: 80
 ---
 apiVersion: networking.istio.io/v1beta1
-kind: Gateway
+kind: Gateway               # 定义listener
 metadata:
   name: simple
 spec:
   selector:
-    istio: ingressgateway
+    istio: ingressgateway   # kubectl get po -n istio-system --show-labels
+                            # istio=ingressgateway
+                            # 当前gateway配置推送到对应的pod中的Envoy
   servers:
     - hosts:
-        - simple.cncamp.io
-      port:
+        - simple.cncamp.io  # 域名校验
+      port:                 # 侦听端口
         name: http-simple
         number: 80
         protocol: HTTP
+
+
+
+
+
