--- a/module12/istio/4.sidecar/nginx.yaml
+++ b/module12/istio/4.sidecar/nginx.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx
+          image: nginx    # 作为server端
 ---
 apiVersion: v1
 kind: Service
