--- a/module15/5.scheme-redirect/https-gateway.yaml
+++ b/module15/5.scheme-redirect/https-gateway.yaml
@@ -22,4 +22,4 @@ spec:
         number: 80
         protocol: HTTP
       tls:
-        httpsRedirect: true
+        httpsRedirect: true         # chrome 301 follow redirect
